# yalv

./: README.md  next.config.js  package-lock.json  package.json  tsconfig.json  yalv.code-workspace
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Header.tsx  LevelSwitchers.tsx  LogContents.tsx  Main.tsx  backend.ts  logViewer.ts
src/pages/: _app.tsx  index.tsx
