[package]
name = "yalv"
version = "0.0.0"
description = "Yet Another Log Viewer"
authors = ["Yuiki"]
license = ""
repository = "https://github.com/Yuiki/yalv"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open"] }
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.2.0" }
thiserror = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
